--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -11,7 +11,8 @@
 
 .columns {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  flex-wrap: wrap;
   overflow: auto;
 }
 
