--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -22,3 +22,8 @@
 .title + .subtitle {
   margin-top: (- $base-size * 3);
 }
+
+.creator {
+  width: calc(33% - 12px);
+  margin: $base-size auto 0;
+}
